@@ -3,6 +3,7 @@ Version: 1.1.0
 Date: ??.09.2022
   Features:
     - Dock breathing light now changes colour dependent on mode.
+    - Now closes GUI after undocking event.
   Changes:
     - Harsher migration scrpts that ensures no spider is lost.
 ---------------------------------------------------------------------------------------------------
